[package]
name = "transaction-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.21.1", features = ["full"] }
csv-async = { version = "1.2.4", features = ["tokio"] }
futures = "0.3"
rust_decimal = "1.26"
thiserror = "1.0"
anyhow = "1.0.65"
log = "0.4.17"
